examples/neg/toplevel_effects.effekt
effect Console {
  def println(msg: String): Unit
}

def sayHello(): Unit/ Console =
  do println("Hello World!")

def pureFun(): Unit / {} = sayHello()

def main() = ()
